Fixed Title overlapping with positioning statement & gif positioning across devices

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -23,168 +23,6 @@ a,h1,h2,p {
   font-family: 'Montserrat', sans-serif;
 }
 
-.box
-{
-    text-align: center;
-    width: 50%;
-    position: absolute;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    font-size: 3.0rem;
-    color: white;
-    margin: 0 auto;
-    background-color: transparent;
-}
-
-.word
-{
-    position: absolute;
-    display: inline-block;
-    margin: 0 auto;
-    color: white;
-}
-.word span
-{
-    position: absolute;
-    display: inline-block;
-    overflow: hidden;
-    margin: 0 auto;
-    animation: animate 12s linear infinite 0s;
-    opacity: 0;
-}
-@keyframes animate
-{
-    0%
-    {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    2%
-    {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-    15%
-    {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-    20%
-    {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    80%
-    {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    100%
-    {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-}
-.word span:nth-child(1)
-{
-    animation-delay: 0s;
-}
-.word span:nth-child(2)
-{
-    animation-delay: 2s;
-}
-.word span:nth-child(3)
-{
-    animation-delay: 4s;
-}
-.word span:nth-child(4)
-{
-    animation-delay: 6s;
-}
-.word span:nth-child(5)
-{
-    animation-delay: 8s;
-}
-.word span:nth-child(6)
-{
-    animation-delay: 10s;
-}
-
-.wordPS
-{
-    position: absolute;
-    display: inline-block;
-    margin: 0 auto;
-    color: white;
-}
-.wordPS span
-{
-    position: absolute;
-    display: inline-block;
-    overflow: hidden;
-    margin: 0 auto;
-    animation: animatePS 12s linear infinite 0s;
-    opacity: 0;
-}
-@keyframes animatePS
-{
-    0%
-    {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    2%
-    {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-    15%
-    {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-    20%
-    {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    80%
-    {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-    100%
-    {
-        opacity: 0;
-        transform: translateY(50px);
-    }
-}
-.wordPS span:nth-child(1)
-{
-    animation-delay: 0s;
-}
-.wordPS span:nth-child(2)
-{
-    animation-delay: 2s;
-}
-.wordPS span:nth-child(3)
-{
-    animation-delay: 4s;
-}
-.wordPS span:nth-child(4)
-{
-    animation-delay: 6s;
-}
-.wordPS span:nth-child(5)
-{
-    animation-delay: 8s;
-}
-.wordPS span:nth-child(6)
-{
-    animation-delay: 10s;
-}
-
-
 .bg-col-1 {
   background-color: ##000000;
 }
